2005-04-23  A Balamurugan  <bala.a@californiadigital.com>

	* doc/examples/hello-sensors.c: file is removed.

	* doc/examples/Makefile.am: updated.

	* doc/examples/Makefile.example: updated.
	

2005-04-22  A Balamurugan  <bala.a@californiadigital.com>

	* libfreeipmi/src/acpi-spmi-locate.c
	(ipmi_acpi_get_firmware_table): fixed unaligned access warnings.
	

2005-04-13  A Balamurugan  <bala.a@californiadigital.com>

	* bmc-watchdog/src/bmc-watchdog.c (_get_port_and_reg_space):
	removed status variable
	
	* fish/src/fish.c (inner_main): like wise
	
	* libfreeipmi/src/acpi-spmi-locate.[ch] (acpi_spmi_get_dev_info):
	like wise

	* libfreeipmi/src/ipmi-locate.[ch] (ipmi_locate): like wise

	* libfreeipmi/src/pci-locate.[ch] (pci_get_dev_info): like wise

	* libfreeipmi/src/smbios-locate.[ch] (smbios_get_dev_info): like
	wise
	

2005-03-20  Anand Babu  <ab@gnu.org.in>

	* fish/src/fish.c (inner_main): Check return value of
	ipmi_open_free_udp_port. 

2005-03-18  Albert Chu <chu11@llnl.gov>

	Added support for vlan configuration in bmc-config.

	* libfreeipmi/src/ipmi-lan-param-spec.h: Add vlan lan conf
	definitions.
	
	* libfreeipmi/src/ipmi-lan-cmds.h,
	libfreeipmi/src/ipmi-lan-cmds.c: Define new templates
	tmpl_set_lan_conf_param_vlan_id_rq,
	tmpl_set_lan_conf_param_vlan_priority_rq,
	tmpl_get_lan_conf_param_vlan_id_rs, and
	tmpl_get_lan_conf_param_vlan_priority_rs.

	* libfreeipmi/src/ipmi-lan-cmds.h, libfreeipmi/src/ipmi-lan-cmds.c
	(fill_lan_set_vlan_id, ipmi_lan_set_vlan_id,
	fill_lan_set_vlan_priority, ipmi_lan_set_vlan_priority,
	ipmi_lan_get_vlan_id, ipmi_lan_get_vlan_priority): New functions.

	* fish/extensions/bc-lan-conf-section.scm
	(checkout-vlan-id-enable, commit-vlan-id-enable, checkout-vlan-id,
	commit-vlan-id, checkout-vlan-priority, commit-vlan-priority): New
	functions.  Added additional entries to lan-conf-keys-validator.

	* fish/extensions/bmc-config.scm: Added new vlan entries to
	lan_conf_s.

	* fish/src/bmc-conf2.h, fish/src/bmc-conf2.c